--- a/application.yaml
+++ b/application.yaml
@@ -6,4 +6,15 @@ metadata:
 spec:
   project: default
   source: 
-    repoURL: 
+    repoURL: https://github.com/MarcoLimache/ArgoProject.git
+    targetRevision: HEAD
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argoapps
+
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+    automated:
+      selfHeal: true
+      prune: true
