--- a/application/deployments.yaml
+++ b/application/deployments.yaml
@@ -19,3 +19,16 @@ spec:
         image: nginx:1.19
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
